[gd_scene load_steps=9 format=3 uid="uid://eqg28oca3p3r"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_hg06t"]
[ext_resource type="PackedScene" uid="uid://c1b1vgcka45ej" path="res://Scenes/GameHub.tscn" id="2_r51h7"]
[ext_resource type="Texture2D" uid="uid://ge2kbe324cja" path="res://assets/background_main3.png" id="3_njxck"]
[ext_resource type="PackedScene" uid="uid://be2rmdwqrqiw0" path="res://addons/SolanaSDK/Scripts/WalletAdapter/WalletAdapterUI.tscn" id="3_u6l6c"]
[ext_resource type="Texture2D" uid="uid://b68xvmq327vkf" path="res://assets/phantomicon.png" id="5_ipuis"]
[ext_resource type="Texture2D" uid="uid://y5owhr7vr7h3" path="res://assets/solflareicon.png" id="6_iwhwo"]
[ext_resource type="Texture2D" uid="uid://bp3b56ned5jc2" path="res://assets/backpackicon.png" id="7_g3kdx"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Managers/candy_machine_manager.gd" id="8_4xl3v"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("wallet_adapter")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hg06t")
game_scene = ExtResource("2_r51h7")
wallet_adapter = NodePath("WalletAdapterUI")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 576.0
offset_bottom = 1024.0
texture = ExtResource("3_njxck")
expand_mode = 3
stretch_mode = 4

[node name="ConnectWallet" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -165.0
offset_top = -214.0
offset_right = 135.0
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "CONTINUE"

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = 199.0
offset_right = 103.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "NEW GAME"

[node name="WalletAdapterUI" parent="." instance=ExtResource("3_u6l6c")]
layout_mode = 1
offset_left = -202.0
offset_top = -153.0
offset_right = 219.0
offset_bottom = 231.0
provider_names = Array[String](["Phantom", "Solflare", "Backpack"])
provider_images = Array[Texture]([ExtResource("5_ipuis"), ExtResource("6_iwhwo"), ExtResource("7_g3kdx")])

[node name="AnchorProgram" type="AnchorProgram" parent="."]

[node name="CandyMachineManager" type="Node" parent="."]
script = ExtResource("8_4xl3v")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -81.0
offset_right = 112.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.878431, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "Space
 Paws"

[connection signal="pressed" from="ConnectWallet" to="." method="_on_connect_wallet_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
